--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pandas = "^2.0.3"
+scikit-learn = "^1.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
