--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 pandas = "^2.0.3"
 scikit-learn = "^1.3.0"
+xlrd = "^2.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
