--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 pandas = "^2.0.3"
 scikit-learn = "^1.3.0"
 xlrd = "^2.0.1"
+pulp = "^2.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
